# game-of-life

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
docs/: source.py
game-of-life/: mkdocs.yml  pyproject.toml
game-of-life/docs/: index.md
src/gvita/: __init__.py  source.py
