[metadata]
name = gvita
version = 0.1.0
description = Little game based on Game of Live from John Conway
long_description = file: README.md
long_description_content_type = text/markdown
author = me15degrees
author_email = me15degrees@gmail.com
url = https://github.com/me15degrees/game-of-life

[options]
packages = find:

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[pypi]
username = __token__
password = pypi-AgEIcHlwaS5vcmcCJDgyMTMzMmQyLWUxOGMtNDk5Zi1iZTMzLTczYjNlNWYxY2JkZgACKlszLCJhYWQwYTQwNS0xYWNhLTQ1ODEtOTU1My0zMDBlOTYyZTBiZDQiXQAABiDaPUM0KfXJHTdo9FyR2n3pQauqu4HEQ6MfCXL06b5tpw
