[metadata]
name = gvita
version = 0.1.0
description = Little game based on Game of Live from John Conway
long_description = file: README.md
long_description_content_type = text/markdown
author = me15degrees
author_email = me15degrees@gmail.com
url = https://github.com/me15degrees/game-of-life

[options]
packages = find:

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[distutils]
  index-servers =
    pypi
    PROJECT_NAME

[pypi]
  username = __token__
  password = pypi-AgEIcHlwaS5vcmcCJDVkZjY5OWZhLTA3OTctNDI5OS1iNmYwLWExMzZhOTZmMmY2NAACDVsxLFsiZ3ZpdGEiXV0AAixbMixbIjVlNDA4ZThmLWJkMDUtNDJjMC1iYmM1LTA1NzQ3ODFmYWVjZCJdXQAABiCQIfwp_JEXsqhcZb8PS5iqSfL4L69lSwbVtzm5Ysnu6A
[PROJECT_NAME]
  repository = https://pypi.org/project/gvita/0.1.0/
  username = __token__
  password = pypi-AgEIcHlwaS5vcmcCJDVkZjY5OWZhLTA3OTctNDI5OS1iNmYwLWExMzZhOTZmMmY2NAACDVsxLFsiZ3ZpdGEiXV0AAixbMixbIjVlNDA4ZThmLWJkMDUtNDJjMC1iYmM1LTA1NzQ3ODFmYWVjZCJdXQAABiCQIfwp_JEXsqhcZb8PS5iqSfL4L69lSwbVtzm5Ysnu6Agit