[metadata]
name = gvita
version = 0.4.0
description = Little game based on Game of Live from John Conway
long_description = file: README.md
long_description_content_type = text/markdown
author = me15degrees
author_email = me15degrees@gmail.com
url = https://github.com/me15degrees/game-of-life

[options]
packages = find:

[options.packages.find]
where = src

[bdist_wheel]
universal = 1