[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = ""
authors = ["me15degrees <me15degrees@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.4.0"

mkdocs-material = "^9.5.27"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
taskipy = "^1.13.0"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.27"
mkdocstrings = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && --check --diff ."
docs = "mkdocs serve"
test = "pytest -s -x --cov=game_of_life -vv"
